@@ -19,7 +19,6 @@ package com.adaptris.core.management;
 import static com.adaptris.core.management.Constants.CFG_KEY_MANAGEMENT_COMPONENT;
 import static com.adaptris.core.util.PropertyHelper.getPropertyIgnoringCase;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
-
 import java.io.InputStream;
 import java.lang.reflect.Constructor;
 import java.util.ArrayList;
@@ -28,10 +27,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import com.adaptris.core.ClosedState;
 import com.adaptris.core.management.classloader.ClassLoaderFactory;
 
@@ -51,7 +48,7 @@ public class ManagementComponentFactory {
   private static final ManagementComponentFactory INSTANCE = new ManagementComponentFactory();
 
   private final Map<Properties, List<ManagementComponentInfo>> managementComponents = new HashMap<>();
-  
+
   private ManagementComponentFactory() {
   }
 
@@ -122,13 +119,13 @@ public class ManagementComponentFactory {
       final String components[] = componentList.split(COMPONENT_SEPARATOR);
       for (final String componentName : components) {
         ManagementComponent resolvedComponent = resolve(componentName, bootstropProperties);
-        
+
         ManagementComponentInfo mcInfo = new ManagementComponentInfo();
         mcInfo.setClassName(resolvedComponent.getClass().getName());
         mcInfo.setState(ClosedState.getInstance());
         mcInfo.setName(componentName);
         mcInfo.setInstance(resolvedComponent);
-        
+
         result.add(mcInfo);
       }
     }
@@ -152,13 +149,15 @@ public class ManagementComponentFactory {
           classLoader = classLoaderFactory.create(classLoader);
           Thread.currentThread().setContextClassLoader(classLoader);
         }
-        final ManagementComponent component = (ManagementComponent) Class.forName(p.getProperty(PROPERTY_KEY), true, classLoader).newInstance();
+        final ManagementComponent component =
+            (ManagementComponent) Class.forName(p.getProperty(PROPERTY_KEY), true, classLoader)
+                .getDeclaredConstructor().newInstance();
         if (classloaderProperty != null) {
           component.setClassLoader(classLoader);
         }
         return component;
       }
-      return (ManagementComponent) Class.forName(name).newInstance();
+      return (ManagementComponent) Class.forName(name).getDeclaredConstructor().newInstance();
     } finally {
       Thread.currentThread().setContextClassLoader(originalContectClassLoader);
     }
