@@ -1,12 +1,12 @@
 /*
  * Copyright 2015 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -165,7 +165,7 @@ public class SftpClient extends FileTransferClientImp {
 
 
   /**
-   * 
+   *
    * @see FileTransferClient#connect(java.lang.String, java.lang.String)
    */
   @Override
@@ -208,7 +208,7 @@ public class SftpClient extends FileTransferClientImp {
       sftpSession.setDaemonThread(true);
       sftpSession.setUserInfo(ui);
       sftpSession.connect(timeout);
-      sftpSession.setServerAliveInterval(new Long(getKeepAliveTimeout()).intValue());
+      sftpSession.setServerAliveInterval(Long.valueOf(getKeepAliveTimeout()).intValue());
       log("OPEN {}:{}", sshHost, sshPort);
       Channel c = sftpSession.openChannel("sftp");
       c.connect(timeout);
@@ -233,7 +233,7 @@ public class SftpClient extends FileTransferClientImp {
   }
 
   /**
-   * 
+   *
    * @see FileTransferClient#dir(java.lang.String, boolean)
    */
   @Override
