@@ -1,12 +1,12 @@
 /*
  * Copyright 2015 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -28,35 +28,35 @@ import com.adaptris.core.CoreException;
 import com.adaptris.core.DefaultMessageFactory;
 
 public class MetadataValueTranslatorTest {
-  
+
   private MetadataValueTranslator metadataValueTranslator;
-  
+
   private AdaptrisMessage message;
-  
+
   @Before
   public void setUp() throws Exception {
     metadataValueTranslator = new MetadataValueTranslator();
     message = DefaultMessageFactory.getDefaultInstance().newMessage();
   }
-  
+
 
   @Test
   public void testSetValue() throws Exception {
     String newMetadataKey = "NewMetadataKey";
     String newValue = "NewValue";
-    
+
     metadataValueTranslator.setMetadataKey(newMetadataKey);
     metadataValueTranslator.setType("java.lang.String");
-    
+
     metadataValueTranslator.setValue(message, newValue);
-    
+
     assertEquals(newValue, message.getMetadataValue(newMetadataKey));
   }
 
   @Test
   public void testSetValueNoMetadataKey() throws Exception {
     String newValue = "NewValue";
-    
+
     metadataValueTranslator.setType("java.lang.String");
     // no error, just warning log
     metadataValueTranslator.setValue(message, newValue);
@@ -65,37 +65,37 @@ public class MetadataValueTranslatorTest {
   @Test
   public void testGetValueNoMetadataKey() throws Exception {
     String newValue = "NewValue";
-        
+
     metadataValueTranslator.setValue(message, newValue);
-    
+
     assertNull(newValue, metadataValueTranslator.getValue(message));
   }
 
   @Test
   public void testSetValueWithIntegerType() throws Exception {
     String newMetadataKey = "NewMetadataKey";
-    Integer newValue = new Integer(1);
-    
+    Integer newValue = Integer.valueOf(1);
+
     metadataValueTranslator.setMetadataKey(newMetadataKey);
     metadataValueTranslator.setType("java.lang.Integer");
-    
+
     metadataValueTranslator.setValue(message, newValue);
-    
+
     Object value = metadataValueTranslator.getValue(message);
-    
+
     assertTrue(value instanceof Integer);
-    assertEquals(new Integer(1), newValue);
+    assertEquals(Integer.valueOf(1), newValue);
   }
 
   @Test
   public void testGetValueDefaultType() throws Exception {
     String newMetadataKey = "NewMetadataKey";
     String newValue = "NewValue";
-    
+
     metadataValueTranslator.setMetadataKey(newMetadataKey);
-    
+
     metadataValueTranslator.setValue(message, newValue);
-    
+
     assertEquals(newValue, metadataValueTranslator.getValue(message));
   }
 
@@ -103,12 +103,12 @@ public class MetadataValueTranslatorTest {
   public void testGetValueDateType() throws Exception {
     String newMetadataKey = "NewMetadataKey";
     Date todaysDate = new Date();
-    
+
     metadataValueTranslator.setMetadataKey(newMetadataKey);
     metadataValueTranslator.setType(Date.class.getName());
-    
+
     metadataValueTranslator.setValue(message, todaysDate);
-    
+
     Object value = metadataValueTranslator.getValue(message);
     assertTrue(value instanceof Date);
     assertEquals(todaysDate, value);
@@ -118,12 +118,12 @@ public class MetadataValueTranslatorTest {
   public void testGetValueInvalidType() throws Exception {
     String newMetadataKey = "NewMetadataKey";
     String newValue = "1";
-    
+
     metadataValueTranslator.setMetadataKey(newMetadataKey);
     metadataValueTranslator.setType("MyInvalidType");
-    
+
     metadataValueTranslator.setValue(message, newValue);
-    
+
     try {
       metadataValueTranslator.getValue(message);
       fail("Should fail with a core exception");
