@@ -1,12 +1,12 @@
 /*
  * Copyright 2017 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,13 +17,10 @@ package com.adaptris.security;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
-
 import java.lang.reflect.Constructor;
-
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-
 import com.adaptris.security.exc.AdaptrisSecurityException;
 import com.adaptris.security.exc.CertException;
 import com.adaptris.security.exc.DecryptException;
@@ -54,10 +51,10 @@ public class AdaptrisSecurityExceptionTest {
   @Test
   public void testConstructor() throws Exception {
     for (String s : EXCEPTION_NAMES) {
-      Exception e = (Exception) Class.forName(s).newInstance();
+      Exception e = (Exception) Class.forName(s).getDeclaredConstructor().newInstance();
       assertNull(e.getCause());
       assertNull(e.getMessage());
-    }   
+    }
   }
 
   @Test
@@ -70,7 +67,7 @@ public class AdaptrisSecurityExceptionTest {
       Exception e = ((Exception) cnst.newInstance(args));
       assertEquals(cause, e.getCause());
       assertEquals(Exception.class.getName(), e.getMessage());
-    }     
+    }
   }
 
   @Test
@@ -82,7 +79,7 @@ public class AdaptrisSecurityExceptionTest {
       Exception e = ((Exception) cnst.newInstance(args));
       assertNull(e.getCause());
       assertEquals("hello", e.getMessage());
-    }      
+    }
   }
 
   @Test
@@ -95,7 +92,7 @@ public class AdaptrisSecurityExceptionTest {
       Exception e = ((Exception) cnst.newInstance(args));
       assertEquals(cause, e.getCause());
       assertEquals("hello", e.getMessage());
-    }  
+    }
   }
 
 }
